# simulations-score-confidence-set

./: .gitignore  LICENSE  README.md  constants.py  pyproject.toml  start.py  utils.py
src/: confidence_sets.py  constants.py  dgp.py  models.py  plot_coverage_from_csv.py  start.py
